k8s-specifications/overlays/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: visign-ingress
  namespace: visign-prod
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "100m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "120"
    cert-manager.io/cluster-issuer: "letsencrypt-dns"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - prod.lyhua.dpdns.org
      secretName: visign-tls-prod
  rules:
    - host: prod.lyhua.dpdns.org
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: visign-ai
                port:
                  number: 8000
          - path: /openapi.json
            pathType: Prefix
            backend:
              service:
                name: visign-ai
                port:
                  number: 8000
          - path: /docs
            pathType: Prefix
            backend:
              service:
                name: visign-ai
                port:
                  number: 8000
          - path: /redoc
            pathType: Prefix
            backend:
              service:
                name: visign-ai
                port:
                  number: 8000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: visign-web
                port:
                  number: 3000
